--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <section class="products  container">
+    <section class="products">
       <p class="products__subtitle"> Ты сегодня покормил кота?</p>
       <h1 class="products__title visually-hidden">Корм для кошек "Нямушка"</h1>
       <div class="products__wrapper">
@@ -24,10 +24,10 @@
                 <h2 class="product__title">Нямушка</h2>
                 <h3 class="product__subtitle">с фуа-гра</h3>
                 <p class="product__desc desc">
-                  <span class="desc__item desc__item--short"><b>10</b> порций</span>
-                  <span class="desc__item desc__item--low">мышь в подарок</span>
+                  <span class="desc__item"><b>10</b> порций</span>
+                  <span class="desc__item">мышь в подарок</span>
                 </p>
-                <p class="product__param param">
+                <p class="product__param param param--long">
                   <span class="param__value param__value--long">0,5</span>
                   <span class="param__text">кг</span>
                 </p>
@@ -36,7 +36,7 @@
                 <li class="footer__item footer__item--default">
                   <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
                   <div class="footer__btn">
-                    <a href="#" class="footer__link">купи</a>.
+                    <a href="#" class="footer__link">купи.</a>
                   </div>
                 </li>
                 <li class="footer__item footer__item--selected">Печень утки разваренная с артишоками.</li>
@@ -51,13 +51,13 @@
                   <li class="comment__default">Сказочное заморское яство</li>
                   <li class="comment__hover">Котэ не одобряет?</li>
                 </ul>
-                <h3 class="product__title">Нямушка</h3>
-                <h4 class="product__subtitle">с рыбой</h4>
+                <h2 class="product__title">Нямушка</h2>
+                <h3 class="product__subtitle">с рыбой</h3>
                 <p class="product__desc desc">
-                  <span class="desc__item desc__item--short"><b>40</b> порций</span>
+                  <span class="desc__item"><b>40</b> порций</span>
                   <span class="desc__item"><b>2</b> мыши в подарок</span>
                 </p>
-                <p class="product-param param">
+                <p class="product__param param">
                   <span class="param__value">2</span>
                   <span class="param__text">кг</span>
                 </p>
@@ -66,7 +66,7 @@
                 <li class="footer__item footer__item--default">
                   <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
                   <div class="footer__btn">
-                    <a href="#" class="footer__link">купи</a>.
+                    <a href="#" class="footer__link">купи.</a>
                   </div>
                 </li>
                 <li class="footer__item footer__item--selected">Головы щучьи с чесноком да свежайшая семгушка.</li>
@@ -78,18 +78,18 @@
             <div class="product__wrapper">
               <div class="product__photo">
                 <ul class="product__comments comment">
-                  <li class="comment-default">Сказочное заморское яство</li>
-                  <li class="comment-hover">Котэ не одобряет?</li>
+                  <li class="comment__default">Сказочное заморское яство</li>
+                  <li class="comment__hover">Котэ не одобряет?</li>
                 </ul>
                 <h2 class="product__title">Нямушка</h2>
-                <h4 class="product__subtitle">с курой</h4>
-                <p class="product__desc desc desc--high">
-                  <span class="desc__item desc__item--long"><b>100</b> порций</span>
+                <h3 class="product__subtitle">с курой</h3>
+                <p class="product__desc--high desc">
+                  <span class="desc__item"><b>100</b> порций</span>
                   <span class="desc__item"><b>5</b> мышей в подарок</span>
                   <span class="desc__item">заказчик доволен</span>
                 </p>
-                <p class="product-param param">
-                  <span class="param-value">5</span>
+                <p class="product__param param">
+                  <span class="param__value">5</span>
                   <span class="param__text">кг</span>
                 </p>
               </div>
@@ -97,11 +97,11 @@
                 <li class="footer__item footer__item--default">
                   <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
                   <div class="footer__btn">
-                    <a href="#" class="footer__link">купи</a>.
+                    <a href="#" class="footer__link">купи.</a>
                   </div>
                 </li>
-                <p class="footer__item footer__item--selected">Филе из цыплят с трюфелями в бульоне.</p>
-                <p class="footer__item footer__item--disabled">Печалька, с курой закончился.</p>
+                <li class="footer__item footer__item--selected">Филе из цыплят с трюфелями в бульоне.</li>
+                <li class="footer__item footer__item--disabled">Печалька, с курой закончился.</li>
               </ul>
             </div>
           </li>
