--- a/source/index.html
+++ b/source/index.html
@@ -8,105 +8,100 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </head>
 
-  <body>
+  <body class="page">
     <section class="products">
       <p class="products__subtitle"> Ты сегодня покормил кота?</p>
       <h1 class="products__title visually-hidden">Корм для кошек "Нямушка"</h1>
       <div class="products__wrapper">
         <ul class="products__list">
           <li class="products__item product">
-            <div class="product__wrapper">
-              <div class="product__photo">
-                <ul class="product__comments comment">
-                  <li class="comment__default">Сказочное заморское яство</li>
-                  <li class="comment__hover">Котэ не одобряет?</li>
-                </ul>
-                <h2 class="product__title">Нямушка</h2>
-                <h3 class="product__subtitle">с фуа-гра</h3>
-                <p class="product__desc desc">
-                  <span class="desc__item"><b>10</b> порций</span>
-                  <span class="desc__item">мышь в подарок</span>
-                </p>
-                <p class="product__param param param--long">
-                  <span class="param__value param__value--long">0,5</span>
-                  <span class="param__text">кг</span>
-                </p>
-              </div>
-              <ul class="product-footer footer">
-                <li class="footer__item footer__item--default">
-                  <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
-                  <div class="footer__btn">
-                    <a href="#" class="footer__link">купи.</a>
-                  </div>
-                </li>
-                <li class="footer__item footer__item--selected">Печень утки разваренная с артишоками.</li>
-                <li class="footer__item footer__item--disabled">Печалька, с фуа-гра закончился.</li>
+            <div class="product__photo">
+              <ul class="product__comments comment">
+                <li class="comment__default">Сказочное заморское яство</li>
+                <li class="comment__hover">Котэ не одобряет?</li>
               </ul>
+              <h2 class="product__title">Нямушка</h2>
+              <h3 class="product__subtitle">с фуа-гра</h3>
+              <p class="product__desc desc">
+                <span class="desc__item"><b>10</b> порций</span>
+                <span class="desc__item">мышь в подарок</span>
+              </p>
+              <p class="product__param param">
+                <span class="param__value">0,5</span>
+                <span class="param__text">кг</span>
+              </p>
             </div>
+            <ul class="product-footer footer">
+              <li class="footer__item footer__item--default">
+                <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
+                <div class="footer__btn">
+                  <a href="#" class="footer__link">купи.</a>
+                </div>
+              </li>
+              <li class="footer__item footer__item--selected">Печень утки разваренная с артишоками.</li>
+              <li class="footer__item footer__item--disabled">Печалька, с фуа-гра закончился.</li>
+            </ul>
           </li>
           <li class="products__item product">
-            <div class="product__wrapper">
-              <div class="product__photo">
-                <ul class="product__comments comment">
-                  <li class="comment__default">Сказочное заморское яство</li>
-                  <li class="comment__hover">Котэ не одобряет?</li>
-                </ul>
-                <h2 class="product__title">Нямушка</h2>
-                <h3 class="product__subtitle">с рыбой</h3>
-                <p class="product__desc desc">
-                  <span class="desc__item"><b>40</b> порций</span>
-                  <span class="desc__item"><b>2</b> мыши в подарок</span>
-                </p>
-                <p class="product__param param">
-                  <span class="param__value">2</span>
-                  <span class="param__text">кг</span>
-                </p>
-              </div>
-              <ul class="product-footer footer">
-                <li class="footer__item footer__item--default">
-                  <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
-                  <div class="footer__btn">
-                    <a href="#" class="footer__link">купи.</a>
-                  </div>
-                </li>
-                <li class="footer__item footer__item--selected">Головы щучьи с чесноком да свежайшая семгушка.</li>
-                <li class="footer__item footer__item--disabled">Печалька, с рыбой закончился.</li>
+            <div class="product__photo">
+              <ul class="product__comments comment">
+                <li class="comment__default">Сказочное заморское яство</li>
+                <li class="comment__hover">Котэ не одобряет?</li>
               </ul>
+              <h2 class="product__title">Нямушка</h2>
+              <h3 class="product__subtitle">с рыбой</h3>
+              <p class="product__desc desc">
+                <span class="desc__item"><b>40</b> порций</span>
+                <span class="desc__item"><b>2</b> мыши в подарок</span>
+              </p>
+              <p class="product__param param">
+                <span class="param__value">2</span>
+                <span class="param__text">кг</span>
+              </p>
             </div>
+            <ul class="product-footer footer">
+              <li class="footer__item footer__item--default">
+                <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
+                <div class="footer__btn">
+                  <a href="#" class="footer__link">купи.</a>
+                </div>
+              </li>
+              <li class="footer__item footer__item--selected">Головы щучьи с чесноком да свежайшая семгушка.</li>
+              <li class="footer__item footer__item--disabled">Печалька, с рыбой закончился.</li>
+            </ul>
           </li>
           <li class="products__item product">
-            <div class="product__wrapper">
-              <div class="product__photo">
-                <ul class="product__comments comment">
-                  <li class="comment__default">Сказочное заморское яство</li>
-                  <li class="comment__hover">Котэ не одобряет?</li>
-                </ul>
-                <h2 class="product__title">Нямушка</h2>
-                <h3 class="product__subtitle">с курой</h3>
-                <p class="product__desc--high desc">
-                  <span class="desc__item"><b>100</b> порций</span>
-                  <span class="desc__item"><b>5</b> мышей в подарок</span>
-                  <span class="desc__item">заказчик доволен</span>
-                </p>
-                <p class="product__param param">
-                  <span class="param__value">5</span>
-                  <span class="param__text">кг</span>
-                </p>
-              </div>
-              <ul class="product-footer footer">
-                <li class="footer__item footer__item--default">
-                  <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
-                  <div class="footer__btn">
-                    <a href="#" class="footer__link">купи.</a>
-                  </div>
-                </li>
-                <li class="footer__item footer__item--selected">Филе из цыплят с трюфелями в бульоне.</li>
-                <li class="footer__item footer__item--disabled">Печалька, с курой закончился.</li>
+            <div class="product__photo">
+              <ul class="product__comments comment">
+                <li class="comment__default">Сказочное заморское яство</li>
+                <li class="comment__hover">Котэ не одобряет?</li>
               </ul>
+              <h2 class="product__title">Нямушка</h2>
+              <h3 class="product__subtitle">с курой</h3>
+              <p class="product__desc product__desc--high desc">
+                <span class="desc__item"><b>100</b> порций</span>
+                <span class="desc__item"><b>5</b> мышей в подарок</span>
+                <span class="desc__item">заказчик доволен</span>
+              </p>
+              <p class="product__param param">
+                <span class="param__value">5</span>
+                <span class="param__text">кг</span>
+              </p>
             </div>
+            <ul class="product-footer footer">
+              <li class="footer__item footer__item--default">
+                <span class="footer__text">Чего сидишь? Порадуй котэ,</span>
+                <div class="footer__btn">
+                  <a href="#" class="footer__link">купи.</a>
+                </div>
+              </li>
+              <li class="footer__item footer__item--selected">Филе из цыплят с трюфелями в бульоне.</li>
+              <li class="footer__item footer__item--disabled">Печалька, с курой закончился.</li>
+            </ul>
           </li>
         </ul>
       </div>
     </section>
+
   </body>
 </html>
