--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body class="page">
+    <div class="page__wrapper">
     <section class="products">
       <p class="products__subtitle"> Ты сегодня покормил кота?</p>
       <h1 class="products__title visually-hidden">Корм для кошек "Нямушка"</h1>
@@ -78,7 +79,7 @@
               </ul>
               <h2 class="product__title">Нямушка</h2>
               <h3 class="product__subtitle">с курой</h3>
-              <p class="product__desc product__desc--high desc">
+              <p class="product__desc desc desc--high">
                 <span class="desc__item"><b>100</b> порций</span>
                 <span class="desc__item"><b>5</b> мышей в подарок</span>
                 <span class="desc__item">заказчик доволен</span>
@@ -102,6 +103,7 @@
         </ul>
       </div>
     </section>
+  </div>
 
   </body>
 </html>
